// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Ember Template Tag support > Basic > should format \`.gjs\` with \`ember: {}\` (defaults) 1`] = `
"import Component from "@glimmer/component";
export default class Foo extends Component {
  <template>
    <button {{on "click" this.onClick}}>{{yield}}</button>
  </template>
}
"
`;

exports[`Ember Template Tag support > Basic > should format \`.gts\` including TypeScript syntax 1`] = `
"import Component from "@glimmer/component";
interface Signature {
  Args: { count: number };
}
export default class Bar extends Component<Signature> {
  <template>
    <span>{{@count}}</span>
  </template>
}
"
`;

exports[`Ember Template Tag support > Basic > should respect \`ember.templateExportDefault\` 1`] = `
"export default <template>hello</template>
"
`;

exports[`Ember Template Tag support > Basic > should respect \`ember.templateSingleQuote\` 1`] = `
"<template>
  <div title='a'></div>
</template>
"
`;

exports[`Ember Template Tag support > Script section (JS) > should format surrounding JS with Prettier, not \`oxc_formatter\` 1`] = `
"const y = { c: 3, d: 4 };
<template>x</template>
"
`;

exports[`Ember Template Tag support > Template section > should respect \`prettier-ignore\` on a template tag 1`] = `
"<template>
  {{! prettier-ignore }}
  <div    >keep</div>
</template>
"
`;

exports[`Ember Template Tag support > Template section > should sort Tailwind classes in template attributes 1`] = `
"<template>
  <div class="flex bg-red-500 p-4 text-white"></div>
</template>
"
`;
